# e-learning-site

./: .gitignore  GUNICORN_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  db.sqlite3  gunicorn.conf.py  pyproject.toml  start.sh  start_gunicorn.ps1  start_gunicorn.sh
courses/: admin.py  forms.py  models.py  services.py  urls.py  views.py
courses/management/commands/: create_sample_data.py
courses/migrations/: 0001_initial.py  0002_initial.py
main/: settings.py  urls.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/courses/: author_dashboard.html  course_confirm_delete.html  course_detail.html  course_form.html  course_list.html  home.html  lesson_confirm_delete.html  lesson_detail.html  lesson_form.html  manage_lessons.html  manage_materials.html  material_confirm_delete.html  material_form.html  my_courses.html
templates/users/: author_profile.html  login.html  profile.html  register.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
