[project]
name = "e-learning-site"
version = "0.1.0"
description = ""
authors = [
    {name = "loopboot",email = "chocoflakes16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "gunicorn (>=25.0.3,<26.0.0)"
]


[tool.poetry]
package-mode=false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
